src/main/java/com/example/credit_service_project/service/errors/exceptions/PaymentException.java
package com.example.credit_service_project.service.errors.exceptions;

public class PaymentException extends RuntimeException{
    public PaymentException(String message) {
        super(message);
    }
}
